# flutter-ffi-test-sox

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/third/install/lib/: libmad.la  libmp3lame.la
android/third/install/lib/pkgconfig/: opus.pc  opusurl.pc  vorbis.pc
example/: pubspec.yaml
example/lib/: main.dart
ios/Classes/: native_add.cpp
lib/: native_add.dart
